--- a/blazorcth/Client/Shared/NavMenu.razor
+++ b/blazorcth/Client/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Lista de Autores
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CrearLibros">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Crear Libros
+            </NavLink>
+        </div>
 
     </nav>
 </div>
