--- a/blazorcth/Client/Pages/ListarAutores.razor
+++ b/blazorcth/Client/Pages/ListarAutores.razor
@@ -5,13 +5,13 @@
 @inject HttpClient Http
 @inject NavigationManager navegar
 
-<PageTitle>Lista de Autores</PageTitle>
+@* <PageTitle>Lista de Autores</PageTitle>
 
 <h1>Autores</h1>
 
 <p>Nombre de Autores.</p>
-
-@if (autors == null)
+ *@
+@* @if (autors == null)
 {
     <p><em>Loading...</em></p>
 }else
@@ -40,10 +40,39 @@
             }
         </tbody>
     </table>
-}
-@code {
+} *@
 
-    public List<Autor_DTO> autors = new List<Autor_DTO>();
+
+
+<MudTable Items="@autors" Hover="true" Breakpoint="Breakpoint.Sm" >
+    <HeaderContent>
+        <MudTh>ID</MudTh>
+        <MudTh>Nombre</MudTh>
+        <MudTh>Accion</MudTh>
+    </HeaderContent>
+    <RowTemplate>
+        <MudTd DataLabel="ID">@context.Id</MudTd>
+        <MudTd DataLabel="Nombre">@context.Nombre</MudTd>
+        <MudTd DataLabel="Delete">
+            <MudIconButton OnClick="(() => Delete(context.Id))" Icon="@Icons.Material.Filled.Delete" Color="Color.Error"></MudIconButton>
+            <MudIconButton OnClick="(() => UpdateAutor(context.Id))" Icon="@Icons.Material.Filled.Edit" Color="Color.Primary"></MudIconButton>
+        </MudTd>
+        
+    </RowTemplate>
+    <PagerContent>
+        <MudTablePager PageSizeOptions="new int[] { 10, 25, 50, 100 }" />
+    </PagerContent>
+</MudTable>
+
+
+
+
+@code {
+    private bool _dense = false;
+    private bool _loading = true;
+    public int Id { get; set; }
+    public List<Autor_DTO> autors { get; set; } = new List<Autor_DTO>();
+
 
     protected override async Task OnInitializedAsync()
     {
