--- a/blazorcth/Client/Shared/MainLayout.razor
+++ b/blazorcth/Client/Shared/MainLayout.razor
@@ -1,26 +1,32 @@
 ﻿@inherits LayoutComponentBase
-@* Required *@
+
 <MudThemeProvider />
 <MudPopoverProvider />
-
-@* Needed for dialogs *@
 <MudDialogProvider />
-
-@* Needed for snackbars *@
 <MudSnackbarProvider />
 
-<div class="page">
+<MudLayout>
+    <!-- Menú lateral -->
+    <NavMenu />
+
+    <!-- Contenido principal -->
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.False" Class="p-4">
+            @Body
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
+
+
+@* <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
 
         <article class="content px-4">
             @Body
         </article>
     </main>
-</div>
+</div> *@
